@@ -18,6 +18,7 @@ Improved debugger:
 *New pseudo variables:
 **OUTFIRED: returns 1 if last Z80 opcode was an OUT operation
 **INFIRED: returns 1 if last Z80 opcode was an IN operation
+**INTFIRED: returns 1 when an interrupt has been generated
 
 Fixed autoload tape on TBBlue
 
